--- a/src/com/v3pm_prototype/view/V3PMGUI.fxml
+++ b/src/com/v3pm_prototype/view/V3PMGUI.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="1.7976931348623157E308" prefHeight="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.V3PMGUIController">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="960.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.V3PMGUIController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -34,7 +34,7 @@
     </MenuBar>
       <BorderPane prefWidth="1200.0" VBox.vgrow="ALWAYS">
          <center>
-            <TabPane fx:id="tpMain" maxHeight="1.7976931348623157E308" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+            <TabPane fx:id="tpMain" maxHeight="1.7976931348623157E308" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
               <tabs>
                 <Tab text="Universe Overview">
                   <content>
