[Added] Roadmap visualization with GraphStream

--- a/src/com/v3pm_prototype/view/V3PMGUI.fxml
+++ b/src/com/v3pm_prototype/view/V3PMGUI.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="960.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.V3PMGUIController">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="980.0" prefWidth="1800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.V3PMGUIController">
   <children>
-    <MenuBar VBox.vgrow="NEVER">
+    <MenuBar maxWidth="1.7976931348623157E308" VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
@@ -32,7 +32,7 @@
         </Menu>
       </menus>
     </MenuBar>
-      <BorderPane prefWidth="1200.0" VBox.vgrow="ALWAYS">
+      <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="1200.0" VBox.vgrow="ALWAYS">
          <center>
             <TabPane fx:id="tpMain" maxHeight="1.7976931348623157E308" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
               <tabs>
