--- a/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
+++ b/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.embed.swing.*?>
 <?import javafx.scene.chart.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
@@ -17,19 +18,29 @@
       </Label>
       <VBox>
          <children>
-            <HBox prefWidth="200.0">
+            <HBox alignment="TOP_RIGHT" prefWidth="200.0">
                <children>
-                  <Label text="Filter by Projects: " />
-                  <ChoiceBox prefWidth="150.0" />
-                  <ComboBox prefWidth="150.0" />
+                  <ChoiceBox fx:id="cbProject" prefHeight="39.0" prefWidth="246.0" />
+               </children>
+               <VBox.margin>
+                  <Insets bottom="4.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox>
+               <children>
+                  <TableView fx:id="tvRoadmap" minHeight="-Infinity" prefHeight="140.0" prefWidth="1000.0">
+                    <columns>
+                      <TableColumn fx:id="clmRoadmap" prefWidth="464.0" text="Roadmap" />
+                      <TableColumn fx:id="clmNPV" minWidth="1.0" prefWidth="275.0" text="NPV" />
+                    </columns>
+                  </TableView>
+                  <SwingNode fx:id="swingNode" HBox.hgrow="ALWAYS">
+                     <HBox.margin>
+                        <Insets left="8.0" />
+                     </HBox.margin>
+                  </SwingNode>
                </children>
             </HBox>
-            <TableView fx:id="tvRoadmap" minHeight="-Infinity" prefHeight="140.0" prefWidth="200.0">
-              <columns>
-                <TableColumn fx:id="clmRoadmap" prefWidth="389.0" text="Roadmap" />
-                <TableColumn fx:id="clmNPV" minWidth="1.0" prefWidth="184.0" text="NPV" />
-              </columns>
-            </TableView>
          </children>
       </VBox>
       <HBox>
