--- a/src/com/v3pm_prototype/view/TabStart.fxml
+++ b/src/com/v3pm_prototype/view/TabStart.fxml
@@ -7,80 +7,29 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<SplitPane dividerPositions="0.5575959933222037" minHeight="500.0" minWidth="1200.0" prefHeight="400.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.TabStartController">
+<SplitPane dividerPositions="0.5575959933222037" minHeight="500.0" minWidth="1200.0" prefHeight="800.0" prefWidth="1800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.TabStartController">
    <items>
-      <AnchorPane maxWidth="1.7976931348623157E308" prefHeight="180.0" prefWidth="1000.0">
+      <VBox prefHeight="398.0" spacing="8.0">
          <children>
-            <Label layoutX="17.0" layoutY="14.0" text="Scenarios">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <TableView fx:id="tvScenarios" layoutX="17.0" layoutY="45.0" prefHeight="200.0">
-              <columns>
-                <TableColumn fx:id="clmScenariosName" prefWidth="262.0" text="Name" />
-                  <TableColumn fx:id="clmScenariosPeriods" minWidth="0.0" prefWidth="83.0" text="Periods" />
-                  <TableColumn fx:id="clmScenariosSlots" prefWidth="89.0" text="Slots" />
-                  <TableColumn fx:id="clmScenarioDR" minWidth="0.0" prefWidth="131.0" text="Discount Rate" />
-                  <TableColumn fx:id="clmScenarioOAF" minWidth="0.0" prefWidth="120.0" text="OA Fixed Costs" />
-              </columns>
-            </TableView>
-            <Button fx:id="btnNewScenario" layoutX="17.0" layoutY="254.0" mnemonicParsing="false" onAction="#openNewScenarioWindow" text="New Scenario" />
-            <Button fx:id="btnCalculateScenario" layoutX="161.0" layoutY="254.0" mnemonicParsing="false" onAction="#calculateScenario" text="Calculate Scenario" />
-         </children>
-         <padding>
-            <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
-         </padding>
-      </AnchorPane>
-      <VBox fillWidth="false" prefHeight="398.0">
-         <children>
-            <Label text="Projects">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <TableView fx:id="tvProjects" maxWidth="1.7976931348623157E308" prefHeight="200.0" VBox.vgrow="ALWAYS">
-               <VBox.margin>
-                  <Insets bottom="10.0" />
-               </VBox.margin>
-               <columns>
-                  <TableColumn fx:id="clmProjectsProject" editable="false" prefWidth="258.0" text="Project" />
-                  <TableColumn fx:id="clmProjectsPeriods" editable="false" minWidth="0.0" prefWidth="73.0" text="Periods" />
-                  <TableColumn fx:id="clmProjectsType" editable="false" prefWidth="136.0" text="Type" />
-                  <TableColumn fx:id="clmProjectsProcess" prefWidth="205.0" text="Process" />
-                  <TableColumn fx:id="clmProjectsFixCosts" prefWidth="122.0" text="FixCosts" />
-                  <TableColumn fx:id="clmProjectsOInv" prefWidth="125.0" text="OInv" />
-                  <TableColumn fx:id="clmProjectsA" prefWidth="51.0" text="a" />
-                  <TableColumn fx:id="clmProjectsB" prefWidth="47.0" text="b" />
-                  <TableColumn fx:id="clmProjectsE" prefWidth="51.0" text="e" />
-                  <TableColumn fx:id="clmProjectsU" prefWidth="49.0" text="u" />
-                  <TableColumn fx:id="clmProjectsM" prefWidth="54.0" text="m" />
-               </columns>
-            </TableView>
-            <Button fx:id="btnNewProject" mnemonicParsing="false" onAction="#openAddProjectWindow" text="New Project">
-               <VBox.margin>
-                  <Insets bottom="15.0" />
-               </VBox.margin>
-            </Button>
             <Label text="Processes">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <TableView fx:id="tvProcesses" maxWidth="1.7976931348623157E308" prefHeight="103.0" VBox.vgrow="ALWAYS">
+            <TableView fx:id="tvProcesses" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="280.0">
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
                <columns>
                   <TableColumn fx:id="clmProcessesProcess" editable="false" prefWidth="258.0" text="Process" />
-                  <TableColumn fx:id="clmProcessesFixCosts" prefWidth="96.0" text="FixCosts" />
-                  <TableColumn fx:id="clmProcessesQ" editable="false" minWidth="0.0" prefWidth="65.0" text="q" />
-                  <TableColumn fx:id="clmProcessesT" prefWidth="57.0" text="t" />
-                  <TableColumn fx:id="clmProcessesP" prefWidth="70.0" text="Preis" />
-                  <TableColumn fx:id="clmProcessesOop" prefWidth="91.0" text="OOp" />
-                  <TableColumn fx:id="clmProcessesDGQ" prefWidth="62.0" text="d(q)" />
-                  <TableColumn fx:id="clmProcessesDGT" prefWidth="68.0" text="v(t)" />
-                  <TableColumn fx:id="clmProcessesDFKT" prefWidth="181.0" text="NachfrageFunktion" />
+                  <TableColumn fx:id="clmProcessesFixCosts" prefWidth="96.0" text="Fixed Costs" />
+                  <TableColumn fx:id="clmProcessesQ" editable="false" minWidth="0.0" prefWidth="65.0" text="Quality" />
+                  <TableColumn fx:id="clmProcessesT" prefWidth="57.0" text="Time" />
+                  <TableColumn fx:id="clmProcessesP" prefWidth="70.0" text="Price" />
+                  <TableColumn fx:id="clmProcessesOop" prefWidth="91.0" text="Op. Outflows" />
+                  <TableColumn fx:id="clmProcessesDGQ" prefWidth="62.0" text="Q. Deg." />
+                  <TableColumn fx:id="clmProcessesDGT" prefWidth="68.0" text="T. Deg" />
+                  <TableColumn fx:id="clmProcessesDFKT" prefWidth="202.0" text="Demand" />
                </columns>
             </TableView>
             <Button fx:id="btnNewProcess" mnemonicParsing="false" onAction="#openAddProcessWindow" text="New Process">
@@ -88,9 +37,65 @@
                   <Insets bottom="15.0" />
                </VBox.margin>
             </Button>
+            <Label text="Projects">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <TableView fx:id="tvProjects" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="280.0">
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+               <columns>
+                  <TableColumn fx:id="clmProjectsProject" editable="false" prefWidth="207.0" text="Project" />
+                  <TableColumn fx:id="clmProjectsPeriods" editable="false" minWidth="0.0" prefWidth="70.0" text="Periods" />
+                  <TableColumn fx:id="clmProjectsType" editable="false" prefWidth="90.0" text="Type" />
+                  <TableColumn fx:id="clmProjectsProcess" prefWidth="90.0" text="Process" />
+                  <TableColumn fx:id="clmProjectsFixCosts" prefWidth="81.0" text="Fixed Costs" />
+                  <TableColumn fx:id="clmProjectsOInv" prefWidth="81.0" text="Inv. Outflows" />
+                  <TableColumn fx:id="clmProjectsA" prefWidth="70.0" text="Ef. OOp" />
+                  <TableColumn fx:id="clmProjectsB" prefWidth="70.0" text="Ef. OInv" />
+                  <TableColumn fx:id="clmProjectsE" minWidth="0.0" prefWidth="70.0" text="Ef. on Time" />
+                  <TableColumn fx:id="clmProjectsU" prefWidth="70.0" text="Ef. on Qual" />
+                  <TableColumn fx:id="clmProjectsM" prefWidth="70.0" text="Ef. on FCosts" />
+               </columns>
+            </TableView>
+            <Button fx:id="btnNewProject" mnemonicParsing="false" onAction="#openAddProjectWindow" text="New Project">
+               <VBox.margin>
+                  <Insets bottom="15.0" />
+               </VBox.margin>
+            </Button>
          </children>
          <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="10.0" />
+            <Insets left="14.0" right="14.0" top="14.0" />
+         </padding>
+      </VBox>
+      <VBox spacing="8.0">
+         <children>
+            <Label layoutX="17.0" layoutY="14.0" text="Scenarios">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <TableView fx:id="tvScenarios" layoutX="17.0" layoutY="45.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="280.0">
+              <columns>
+                <TableColumn fx:id="clmScenariosName" prefWidth="258.0" text="Name" />
+                  <TableColumn fx:id="clmScenariosPeriods" minWidth="0.0" prefWidth="83.0" text="Periods" />
+                  <TableColumn fx:id="clmScenariosSlots" prefWidth="49.0" text="Slots" />
+                  <TableColumn fx:id="clmScenarioDR" minWidth="0.0" prefWidth="125.0" text="Discount Rate" />
+                  <TableColumn fx:id="clmScenarioOAF" minWidth="0.0" prefWidth="93.0" text="OA FCosts" />
+                  <TableColumn fx:id="clmScenarioNPV" minWidth="0.0" prefWidth="153.0" text="NPV" />
+              </columns>
+            </TableView>
+            <HBox spacing="8.0">
+               <children>
+                  <Button fx:id="btnNewScenario" layoutX="17.0" layoutY="254.0" mnemonicParsing="false" onAction="#openNewScenarioWindow" text="New Scenario" />
+                  <Button fx:id="btnCalculateScenario" layoutX="161.0" layoutY="254.0" mnemonicParsing="false" onAction="#calculateScenario" text="Calculate Scenario" />
+               </children>
+            </HBox>
+         </children>
+         <padding>
+            <Insets left="14.0" right="14.0" top="14.0" />
          </padding>
       </VBox>
    </items>
