--- a/src/com/v3pm_prototype/view/V3PMGUI.css
+++ b/src/com/v3pm_prototype/view/V3PMGUI.css
@@ -6,3 +6,23 @@
 .menu-bar .menu .label {
     -fx-text-fill: #2d3e4c;
 }
+
+.default-color0.chart-series-line { -fx-stroke: #F3622D; }
+.default-color1.chart-series-line { -fx-stroke: #66BD66; }
+.default-color2.chart-series-line { -fx-stroke: #FBA71B; }
+.default-color3.chart-series-line { -fx-stroke: #41A9C9; }
+.default-color4.chart-series-line { -fx-stroke: #4258C9; }
+.default-color5.chart-series-line { -fx-stroke: #9A42C8; }
+.default-color6.chart-series-line { -fx-stroke: #C84164; }
+.default-color7.chart-series-line { -fx-stroke: #888888; }
+ 
+.default-color0.chart-line-symbol { -fx-background-color: #F3622D, white; }
+.default-color1.chart-line-symbol { -fx-background-color: #66BD66, white; }
+.default-color2.chart-line-symbol { -fx-background-color: #FBA71B, white; }
+.default-color3.chart-line-symbol { -fx-background-color: #41A9C9, white; }
+.default-color4.chart-line-symbol { -fx-background-color: #4258C9, white; }
+.default-color5.chart-line-symbol { -fx-background-color: #9A42C8, white; }
+.default-color6.chart-line-symbol { -fx-background-color: #C84164, white; }
+.default-color7.chart-line-symbol { -fx-background-color: #888888, white; }
+
+
