--- a/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
+++ b/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <HBox maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.TabScenarioCalculationController">
    <children>
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="1200.0" spacing="10.0" HBox.hgrow="ALWAYS">
@@ -63,6 +62,19 @@
                   </LineChart>
                </children>
             </HBox>
+            <TableView fx:id="tvProcesses" prefHeight="200.0" prefWidth="200.0">
+              <columns>
+                <TableColumn fx:id="clmProcessesName" prefWidth="311.0" text="Process" />
+                <TableColumn fx:id="clmProcessesQ" prefWidth="95.0" text="Quality" />
+                  <TableColumn fx:id="clmProcessesQDelta" prefWidth="79.0" text="QDelta" />
+                  <TableColumn fx:id="clmProcessesT" prefWidth="73.0" text="Time" />
+                  <TableColumn fx:id="clmProcessesTDelta" prefWidth="96.0" text="TDelta" />
+                  <TableColumn fx:id="clmProcessesOOp" prefWidth="103.0" text="OOp" />
+                  <TableColumn fx:id="clmProcessesOOpDelta" prefWidth="121.0" text="OOpDelta" />
+                  <TableColumn fx:id="clmProcessesFC" prefWidth="121.0" text="Fixed Costs" />
+                  <TableColumn fx:id="clmProcessesFCDelta" prefWidth="102.0" text="FCDelta" />
+              </columns>
+            </TableView>
          </children>
          <padding>
             <Insets bottom="14.0" left="14.0" right="14.0" top="14.0" />
