--- a/src/com/v3pm_prototype/view/TabStart.fxml
+++ b/src/com/v3pm_prototype/view/TabStart.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<SplitPane dividerPositions="0.5575959933222037" minHeight="500.0" minWidth="1200.0" prefHeight="800.0" prefWidth="1800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.TabStartController">
+<SplitPane dividerPositions="0.5575959933222037" minHeight="500.0" minWidth="1200.0" prefHeight="800.0" prefWidth="1800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.controller.TabStartController">
    <items>
       <VBox prefHeight="398.0" spacing="8.0">
          <children>
