--- a/src/com/v3pm_prototype/view/AddProcess.fxml
+++ b/src/com/v3pm_prototype/view/AddProcess.fxml
@@ -6,109 +6,174 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="840.0" spacing="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.controller.AddProcessController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="588.0" spacing="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.controller.AddProcessController">
    <children>
       <Label text="Definition of a new Process" textFill="#2e8ce4">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <FlowPane hgap="10.0" prefWidth="200.0">
+      <FlowPane hgap="10.0">
          <children>
             <Label text="Name: " />
             <TextField fx:id="tfName" />
          </children>
       </FlowPane>
-      <TitledPane animated="false" collapsible="false" prefHeight="112.0" prefWidth="940.0" text="Price Settings">
+      <TitledPane animated="false" collapsible="false" text="Price Settings">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+            <VBox fillWidth="false">
                <children>
-                  <Label layoutX="61.0" layoutY="17.0" text="Price" />
-                  <TextField fx:id="tfP" layoutX="14.0" layoutY="44.0" prefWidth="120.0" text="0" />
-                  <Label layoutX="200.0" layoutY="17.0" text="Operating Outflow" />
-                  <TextField fx:id="tfOop" layoutX="190.0" layoutY="44.0" prefWidth="120.0" text="0" />
-                  <TextField fx:id="tfFixedCosts" layoutX="377.0" layoutY="44.0" prefWidth="120.0" text="0" />
-                  <Label layoutX="413.0" layoutY="17.0" text="Fix Costs" />
+                  <HBox>
+                     <children>
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <Label alignment="CENTER" layoutX="61.0" layoutY="17.0" maxWidth="1.7976931348623157E308" prefWidth="120.0" text="Price" HBox.hgrow="ALWAYS" />
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <Label alignment="CENTER" layoutX="200.0" layoutY="17.0" maxWidth="1.7976931348623157E308" prefWidth="120.0" text="Operating Outflow" HBox.hgrow="ALWAYS" />
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <Label alignment="CENTER" layoutX="413.0" layoutY="17.0" maxWidth="1.7976931348623157E308" prefWidth="120.0" text="Fix Costs" HBox.hgrow="ALWAYS" />
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER">
+                     <children>
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="tfFixedCosts" alignment="CENTER" layoutX="377.0" layoutY="44.0" prefWidth="120.0" text="0" />
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="tfP" alignment="CENTER" layoutX="14.0" layoutY="44.0" prefWidth="120.0" text="0" />
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="tfOop" alignment="CENTER" layoutX="190.0" layoutY="44.0" prefWidth="120.0" text="0" />
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
                </children>
-            </AnchorPane>
+            </VBox>
         </content>
       </TitledPane>
-      <TitledPane animated="false" collapsible="false" prefHeight="112.0" text="Process Quality Settings">
+      <TitledPane animated="false" collapsible="false" text="Process Quality Settings">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+            <VBox>
                <children>
-                  <Label layoutX="44.0" layoutY="14.0" text="Current Quality: " />
-                  <Slider fx:id="slQ" blockIncrement="1.0" layoutX="14.0" layoutY="35.0" minorTickCount="24" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="50.0" />
-                  <Label layoutX="534.0" layoutY="9.0" text="Degeneration Factor" />
-                  <TextField fx:id="tfDegQ" layoutX="549.0" layoutY="31.0" prefWidth="80.0" text="0" />
-                  <Label fx:id="lblQ" layoutX="174.0" layoutY="14.0" text="50%" />
+                  <HBox>
+                     <children>
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <Label fx:id="lblQ" alignment="CENTER" layoutX="174.0" layoutY="14.0" prefWidth="120.0" text="50%" />
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <Label alignment="CENTER" layoutX="534.0" layoutY="9.0" prefWidth="120.0" text="Degeneration Factor" />
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <VBox prefWidth="120.0" />
+                        <VBox prefWidth="40.0" />
+                     </children>
+                  </HBox>
+                  <HBox>
+                     <children>
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <Slider fx:id="slQ" blockIncrement="1.0" layoutX="14.0" layoutY="35.0" minorTickCount="24" prefWidth="120.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="50.0" />
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="tfDegQ" alignment="CENTER" layoutX="549.0" layoutY="31.0" prefWidth="120.0" text="0" />
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <VBox prefWidth="120.0" />
+                        <VBox prefWidth="40.0" />
+                     </children>
+                  </HBox>
                </children>
-            </AnchorPane>
+            </VBox>
         </content>
       </TitledPane>
-      <TitledPane animated="false" collapsible="false" prefHeight="112.0" prefWidth="940.0" text="Time Settings">
+      <TitledPane animated="false" collapsible="false" text="Time Settings">
          <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+            <VBox>
                <children>
-                  <Label layoutX="40.0" layoutY="17.0" text="Current Time" />
-                  <TextField fx:id="tfT" layoutX="14.0" layoutY="44.0" prefWidth="120.0" text="0" />
-                  <TextField fx:id="tfDegT" layoutX="403.0" layoutY="44.0" prefWidth="80.0" text="0" />
-                  <Label layoutX="388.0" layoutY="17.0" text="Degeneration Factor" />
+                  <HBox>
+                     <children>
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <Label alignment="CENTER" layoutX="40.0" layoutY="17.0" prefWidth="120.0" text="Current Time" />
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <Label alignment="CENTER" layoutX="388.0" layoutY="17.0" prefWidth="120.0" text="Degeneration Factor" />
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <VBox prefWidth="120.0" />
+                        <VBox prefWidth="40.0" />
+                     </children>
+                  </HBox>
+                  <HBox>
+                     <children>
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="tfT" alignment="CENTER" layoutX="14.0" layoutY="44.0" prefWidth="120.0" text="0" />
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="tfDegT" alignment="CENTER" layoutX="403.0" layoutY="44.0" prefWidth="120.0" text="0" />
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                        <VBox prefWidth="120.0" />
+                        <VBox prefWidth="40.0" HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
                </children>
-            </AnchorPane>
+            </VBox>
          </content>
       </TitledPane>
-      <TitledPane animated="false" collapsible="false" prefHeight="112.0" prefWidth="940.0" text="Demand Settings">
+      <TitledPane animated="false" collapsible="false" text="Demand Settings">
          <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+            <VBox>
                <children>
-                  <TextField fx:id="tfDMP" layoutX="14.0" layoutY="27.0" prefWidth="120.0" text="0" />
-                  <Label layoutX="142.0" layoutY="20.0" text="+">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="tfDMLambda" layoutX="175.0" layoutY="27.0" prefWidth="120.0" text="0" />
-                  <Label layoutX="303.0" layoutY="27.0" text="*">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="314.0" layoutY="22.0" prefHeight="25.0" prefWidth="6.0" text="(">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="tfDMAlpha" layoutX="338.0" layoutY="27.0" prefWidth="49.0" text="0" />
-                  <Label layoutX="395.0" layoutY="27.0" text="*">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="cbDMFktQ" layoutX="419.0" layoutY="27.0" prefWidth="96.0" />
-                  <Label layoutX="523.0" layoutY="20.0" text="+">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="tfDMBeta" layoutX="556.0" layoutY="27.0" prefWidth="49.0" text="0" />
-                  <ComboBox fx:id="cbDMFktT" layoutX="637.0" layoutY="27.0" prefWidth="96.0" />
-                  <Label layoutX="613.0" layoutY="27.0" text="*">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="741.0" layoutY="20.0" text=")">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="69.0" layoutY="57.0" text="ρ" textFill="#b5b5b5" />
-                  <Label layoutX="231.0" layoutY="57.0" text="λ" textFill="#b5b5b5" />
-                  <Label layoutX="358.0" layoutY="57.0" text="α" textFill="#b5b5b5" />
-                  <Label layoutX="576.0" layoutY="57.0" text="β" textFill="#b5b5b5" />
+                  <HBox>
+                     <children>
+                        <VBox HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="tfDMP" layoutX="14.0" layoutY="27.0" prefWidth="64.0" text="0" />
+                        <Label alignment="CENTER" layoutX="142.0" layoutY="20.0" prefWidth="30.0" text="+">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="tfDMLambda" layoutX="175.0" layoutY="27.0" prefWidth="64.0" text="0" />
+                        <Label alignment="CENTER" layoutX="303.0" layoutY="27.0" prefWidth="30.0" text="*">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="314.0" layoutY="22.0" prefHeight="25.0" prefWidth="6.0" text="(">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="tfDMAlpha" layoutX="338.0" layoutY="27.0" prefWidth="64.0" text="0" />
+                        <Label alignment="CENTER" layoutX="395.0" layoutY="27.0" prefWidth="30.0" text="*">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <ComboBox fx:id="cbDMFktQ" layoutX="419.0" layoutY="27.0" prefWidth="64.0" />
+                        <Label alignment="CENTER" layoutX="523.0" layoutY="20.0" prefWidth="30.0" text="+">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="tfDMBeta" layoutX="556.0" layoutY="27.0" prefWidth="64.0" text="0" />
+                        <Label alignment="CENTER" layoutX="613.0" layoutY="27.0" prefWidth="30.0" text="*">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <ComboBox fx:id="cbDMFktT" layoutX="637.0" layoutY="27.0" prefWidth="64.0" />
+                        <Label layoutX="741.0" layoutY="20.0" text=")">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <VBox HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
+                  <HBox>
+                     <children>
+                        <Label alignment="CENTER" layoutX="69.0" layoutY="57.0" prefWidth="64.0" text="ρ" textFill="#b5b5b5" />
+                        <VBox prefWidth="30.0" />
+                        <Label alignment="CENTER" layoutX="231.0" layoutY="57.0" prefWidth="64.0" text="λ" textFill="#b5b5b5" />
+                        <VBox prefWidth="36.0" />
+                        <Label alignment="CENTER" layoutX="358.0" layoutY="57.0" prefWidth="64.0" text="α" textFill="#b5b5b5" />
+                        <VBox prefWidth="30.0" />
+                        <VBox prefWidth="94.0" />
+                        <Label alignment="CENTER" layoutX="576.0" layoutY="57.0" prefWidth="64.0" text="β" textFill="#b5b5b5" />
+                     </children>
+                  </HBox>
                </children>
-            </AnchorPane>
+            </VBox>
          </content>
       </TitledPane>
       <Button fx:id="btnAddProcess" mnemonicParsing="false" onAction="#createProcess" text="Create Process" />
