[ADDED] Robustness information in Project Tooltips

--- a/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
+++ b/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
@@ -67,7 +67,7 @@
                       <NumberAxis forceZeroInRange="false" label="Quality" side="LEFT" />
                     </yAxis>
                   </LineChart>
-                  <LineChart fx:id="lcProcessTime" legendSide="RIGHT" prefHeight="400.0" stylesheets="@V3PMGUI.css" title="Process Time" HBox.hgrow="ALWAYS">
+                  <LineChart fx:id="lcProcessTime" legendSide="RIGHT" legendVisible="false" prefHeight="400.0" stylesheets="@V3PMGUI.css" title="Process Time" HBox.hgrow="ALWAYS">
                      <xAxis>
                         <CategoryAxis endMargin="10.0" gapStartAndEnd="false" label="Periods" side="BOTTOM" startMargin="10.0" />
                      </xAxis>
