--- a/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
+++ b/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
@@ -36,14 +36,17 @@
                         </VBox>
                      </content>
                   </TitledPane>
-                  <TitledPane collapsible="false" minWidth="153.0" prefHeight="152.0" prefWidth="153.0" text="Robustness">
+                  <TitledPane collapsible="false" contentDisplay="RIGHT" minWidth="153.0" prefHeight="152.0" text="Robustness">
+                     <graphic>
+                        <Button mnemonicParsing="false" text="More" />
+                     </graphic>
                      <content>
                         <VBox fx:id="roadmapContainer11" prefHeight="112.0">
                            <children>
                               <ProgressIndicator fx:id="piRobustness" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
                               <Label fx:id="lblRobustness" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" textFill="#33ccf5" VBox.vgrow="ALWAYS">
                                  <font>
-                                    <Font size="36.0" />
+                                    <Font name="System Bold" size="36.0" />
                                  </font>
                               </Label>
                            </children>
@@ -97,7 +100,7 @@
       </VBox>
       <TitledPane collapsible="false" contentDisplay="RIGHT" graphicTextGap="8.0" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefHeight="590.0" prefWidth="177.0" text="Roadmap Explorer">
          <content>
-            <VBox prefHeight="538.0" prefWidth="420.0">
+            <VBox prefHeight="538.0" prefWidth="428.0">
                <children>
                   <TableView fx:id="tvRoadmap" maxHeight="1.7976931348623157E308" minHeight="-Infinity" VBox.vgrow="ALWAYS">
                     <columns>
